# featureforest

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  env.yml  env_cpu.yml  env_gpu.yml  environment.yaml  index.html  install.bat  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  run_pipeline.ipynb  run_pipeline.py  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: build_docs.yml  setup_test_publish.yml  test_and_deploy.yml  test_and_publish.yml  test_deploy_conda.yml  test_deploy_conda.yml.disabled
docs/: feature_extractor.md  howto.md  index.md  install.md  model_adapter.md  run_pipeline.md  segmentation.md  tutorial.md  widgets.md
docs/stylesheets/: extra.css
feature_extractor/: index.html
howto/: index.html
install/: index.html
model_adapter/: index.html
run_pipeline/: index.html
search/: search_index.json
segmentation/: index.html
src/featureforest/: __init__.py  _embedding_extractor_widget.py  _feature_extractor_widget.py  _sam_predictor_widget.py  _sam_prompt_segmentation_widget.py  _sam_rf_segmentation_widget.py  _segmentation_widget.py  napari.yaml
src/featureforest/SAM/: __init__.py  setup_model.py
src/featureforest/SAM/models/LightHQSAM/: __init__.py  setup_light_hqsam.py
src/featureforest/SAM/models/MobileSAM/: __init__.py  setup_mobile_sam.py
src/featureforest/SAM/models/weights/: mobile_sam.pt.REMOVED.git-id
src/featureforest/_tests/: test_widget.py
src/featureforest/exports/: __init__.py  base.py
src/featureforest/models/: __init__.py  base.py  mobile_sam.py  util.py
src/featureforest/models/Cellpose/: __init__.py  adapter.py  cellpose_downsample.py  model.py
src/featureforest/models/DinoV2/: __init__.py  adapter.py  model.py
src/featureforest/models/MobileSAM/: __init__.py  adapter.py  model.py  tiny_vit_sam.py
src/featureforest/models/SAM/: __init__.py  adapter.py  model.py
src/featureforest/models/SAM2/: __init__.py  adapter.py  model.py
src/featureforest/postprocess/: __init__.py  mean_curvature.py  postprocess.py  postprocess_with_sam.py
src/featureforest/utils/: colormaps.py  config.py  data.py  dataset.py  downloader.py  extract.py  pipeline_prediction.py  postprocess.py  postprocess_with_sam.py  training.py  usage_stats.py
src/featureforest/widgets/: __init__.py  usage_stats.py  utils.py
src/napari_sam_labeling_tools/: __init__.py  _embedding_extractor_widget.py  _sam_predictor_widget.py  _sam_prompt_segmentation_widget.py  _sam_rf_segmentation_widget.py  napari.yaml
src/napari_sam_labeling_tools/SAM/: __init__.py  setup_model.py
src/napari_sam_labeling_tools/SAM/models/LightHQSAM/: tiny_vit_sam.py
src/napari_sam_labeling_tools/SAM/models/segment_anything/: predictor.py
src/napari_sam_labeling_tools/SAM/models/weights/: sam_hq_vit_tiny.pth.REMOVED.git-id
src/napari_sam_labeling_tools/_tests/: test_widget.py
src/napari_sam_labeling_tools/utils/: colormap.py  colormaps.py  data.py  extract.py  postprocess.py  postprocess_with_sam.py
src/napari_sam_labeling_tools/widgets/: __init__.py  scroll_wrapper.py  utils.py
stylesheets/: extra.css
tests/: test_dataset.py  test_pipeline_prediction.py
tests/model_adapter_tests/: embedding_extraction.py  test_dino_adapter.py  test_mobilesam_adapter.py  test_sam2_adapter.py
tests/performance/: measure_model_runtime_stats.py  run_performance_tests.sh
tests/smoke_tests/: test_embedding_extraction.py  test_sam_embedding_extraction.py
tutorial/: index.html
