[metadata]
name = napari-sam-labeling-tools
version = attr: napari_sam_labeling_tools.__version__
author = Mehdi Seifi
author_email = mehdiseifi@gmail.com
url = https://github.com/juglab/napari-sam-labeling-tools
description = A plugin for segmentation using SAM model and its feature space.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = 
    napari_sam_labeling_tools
    napari_sam_labeling_tools.SAM
    napari_sam_labeling_tools.utils
    napari_sam_labeling_tools.widgets
include_package_data = True
package_dir =
    =src

python_requires = >=3.8
install_requires =
    numpy
    opencv-python==4.8.0.74
    scikit-learn
    scikit-image
    matplotlib
    pynrrd
    napari
    magicgui
    qtpy
    h5py
    ; pytorch
    ; torchvision
    timm


# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-sam-labeling-tools = napari_sam_labeling_tools:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
