[metadata]
name = featureforest
version = attr: featureforest.__version__
author = Mehdi Seifi
author_email = mehdiseifi@gmail.com
url = https://github.com/juglab/featureforest
description = "A napari plugin for segmentation using vision transformer models' features"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8
install_requires =
    numpy == 1.23.5
    opencv-python
    scikit-learn
    scikit-image
    matplotlib
    pynrrd
    napari
    magicgui
    qtpy
    h5py
    pooch
    ; pytorch
    ; torchvision
    timm
    segment-anything @ git+https://github.com/facebookresearch/segment-anything.git

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-sam-labeling-tools = featureforest:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
